# cpp_mystring

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  NourUtilString.pro  README.md  main.cpp  utilstring.cpp  utilstring.h
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_08e329178fd1abe73da96f20b637b3db.html  dir_1aacc9fe326cdbfa6189a44546b2df66.html  dir_26e161bd706b689737ea0ef524ddc480.html  dir_3e05ecebcd4ec354991c0fe7777741d7.html  dir_443f2147b8bdda0a9880c1bca57b896e.html  dir_4bf84cee8c4ad77ec341c13003921ab6.html  dir_4bf84cee8c4ad77ec341c13003921ab6.js  dir_6960a8f89bb3a50a11206883cfdcd8ed.html  dir_98f3c9490cdf79f1905bfac13c5cf365.html  dir_a8b78a19bd50a3cabecea023043ca1be.html  dir_a8b78a19bd50a3cabecea023043ca1be.js  dir_e3da2e21cd04b3876441f71203b18d9f.html  dir_f09d564695a8a7f5713b0ef37bdf7d31.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pages.html
doc/html/search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  defines_4.js  files_0.js  files_2.js  files_3.js  pages_0.js  (+15 more)
doc/latex/: annotated.tex  dir_4bf84cee8c4ad77ec341c13003921ab6.tex  dir_a8b78a19bd50a3cabecea023043ca1be.tex  files.tex  namespaces.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc
(+63 files in other folders)
